--- a/www/index.html
+++ b/www/index.html
@@ -27,11 +27,11 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready">
-                <p class="status pending blink">Connecting to Device</p>
-                <p class="status complete blink hide">Device is Ready</p>
-            </div>
+            <ul>
+                <li>jeden</li>
+                <li>dva</li>
+                <li>tri</li>
+            </ul>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
